Tweak styles: deemphasize sidebar

--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -94,7 +94,7 @@
 <img class="logo" src="images/logo.png" width="136" height="136" alt="a picture of me">
 
 <p>
-<strong>Last updated:</strong><br>
+<strong>Last updated</strong><br>
 <span class="date"><TMPL_VAR date></span><br>
 <em class="tz-notice">All times are UTC, unless specified otherwise.</em>
 </p>
@@ -112,7 +112,7 @@
 
 <p></p>
 
-<h2>Planetarium:</h2>
+<h2>Planetarium</h2>
 <ul>
 <li><a href="http://www.planetapache.org/">Planet Apache</a></li>
 <li><a href="http://planet.debian.net/">Planet Debian</a></li>
@@ -128,6 +128,9 @@
 <p>
 Powered by<br>
 <a href="http://intertwingly.net/code/venus/"><img src="images/planet.png" width="80" height="15" alt="Planet" border="0"></a>
+<br>
+<br>
+Source in <a href="https://github.com/mgedmin/planet-mg">Github</a>
 </p>
 
 </div>
