--- a/theme/planet.css
+++ b/theme/planet.css
@@ -7,7 +7,7 @@
  */
 
 body {
-	border-right: 1px solid black;
+	border-right: 1px solid #eee;
 	margin-right: 200px;
 
 	padding-left: 20px;
@@ -98,6 +98,8 @@ img.face {
 
 	font-family: "Bitstream Vera Sans", sans-serif;
 	font-size: 85%;
+
+        color: #888;
 }
 
 .sidebar .logo {
@@ -107,7 +109,7 @@ img.face {
 .sidebar h2 {
 	font-size: 110%;
 	font-weight: bold;
-	color: black;
+	color: #666;
 
 	padding-left: 1em;
 	margin-left: 0px;
@@ -140,7 +142,7 @@ img.face {
 }
 
 .sidebar p {
-	border-top: 1px solid grey;
+	border-top: 1px solid #eee;
 	margin-top: 1.5em;
         margin-bottom: 0;
 	padding-top: 1em;
