Make the add form look like it's part of the site

--- a/theme/planet.css
+++ b/theme/planet.css
@@ -113,6 +113,9 @@ img.face {
 	font-size: 85%;
 
         color: #888;
+
+        border-left: 1px solid #eee;    /* added by mg */
+        padding-bottom: 1.5em;          /* added by mg */
 }
 
 .sidebar .logo {
