Prettier help popup on '?'

--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -92,6 +92,20 @@
 </TMPL_LOOP>
 
 
+<div id="keyboard-shortcuts" style="display: none">
+<h2>Keyboard shortcuts</h2>
+<dl>
+  <dt>?</dt>   <dd>Show this help message.</dd>
+  <dt>t</dt>   <dd>Open original article in a new tab.</dd>
+  <dt>v/o</dt> <dd>Collapse/expand the current article.</dd>
+  <dt>j/k</dt> <dd>Select next/previous article.</dd>
+  <dt>n/p</dt> <dd>Select next/previous expanded article.</dd>
+  <dt>shift + n/p</dt>
+               <dd>Collapse current, then select next/previous expanded
+                   article.</dd>
+</dl>
+</div>
+
 <div class="sidebar">
 <img class="logo" src="images/logo.png" width="136" height="136" alt="a picture of me">
 
