Tweak help message appearance

--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -95,14 +95,23 @@
 <div id="keyboard-shortcuts" style="display: none">
 <h2>Keyboard shortcuts</h2>
 <dl>
-  <dt>?</dt>   <dd>Show this help message.</dd>
-  <dt>t</dt>   <dd>Open original article in a new tab.</dd>
-  <dt>v/o</dt> <dd>Collapse/expand the current article.</dd>
-  <dt>j/k</dt> <dd>Select next/previous article.</dd>
-  <dt>n/p</dt> <dd>Select next/previous expanded article.</dd>
-  <dt>shift + n/p</dt>
-               <dd>Collapse current, then select next/previous expanded
-                   article.</dd>
+  <dt>?</dt>
+  <dd>Show this help message.</dd>
+
+  <dt>t</dt>
+  <dd>Open original article in a new tab.</dd>
+
+  <dt>v <em>or</em> o</dt>
+  <dd>Collapse/expand the current article.</dd>
+
+  <dt>j <em>or</em> k</dt>
+  <dd>Select next/previous article.</dd>
+
+  <dt>n <em>or</em> p</dt>
+  <dd>Select next/previous expanded article.</dd>
+
+  <dt>shift + n <em>or</em> p</dt>
+  <dd>Collapse current, then select next/previous expanded article.</dd>
 </dl>
 </div>
 
