--- a/theme/planet.css
+++ b/theme/planet.css
@@ -390,5 +390,26 @@ div.entry > p.date:hover {
 #keyboard-shortcuts h2 {
     color: #fff;
     margin: 0;
+    padding: 4px;
     border-bottom: 1px solid #eee;
+}
+#keyboard-shortcuts dl {
+    padding: 0px 4px;
+}
+#keyboard-shortcuts dt {
+    display: inline-block;
+    float: left;
+    padding: 3px 6px;
+    margin-right: 1em;
+    min-width: 1em;
+    text-align: center;
+    background: #eee;
+    color: #444;
+    border-radius: 2px;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4),
+                      0 1px 1px rgba(0, 0, 0, 0.05);
+}
+#keyboard-shortcuts dd {
+    padding: 3px;
+    margin-bottom: 6px;
 }
