Tweak help appearance even more

--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -95,22 +95,22 @@
 <div id="keyboard-shortcuts" style="display: none">
 <h2>Keyboard shortcuts</h2>
 <dl>
-  <dt>?</dt>
+  <dt><tt>?</tt></dt>
   <dd>Show this help message.</dd>
 
-  <dt>t</dt>
+  <dt><tt>t</tt></dt>
   <dd>Open original article in a new tab.</dd>
 
-  <dt>v <em>or</em> o</dt>
-  <dd>Collapse/expand the current article.</dd>
-
-  <dt>j <em>or</em> k</dt>
+  <dt><tt>j</tt> <em>/</em> <tt>k</tt></dt>
   <dd>Select next/previous article.</dd>
 
-  <dt>n <em>or</em> p</dt>
+  <dt><tt>n</tt> <em>/</em> <tt>p</tt></dt>
   <dd>Select next/previous expanded article.</dd>
 
-  <dt>shift + n <em>or</em> p</dt>
+  <dt><tt>v</tt> <em>or</em> <tt>o</tt></dt>
+  <dd>Collapse/expand the current article.</dd>
+
+  <dt><tt>shift</tt> + <tt>n</tt> <em>/</em> <tt>p</tt></dt>
   <dd>Collapse current, then select next/previous expanded article.</dd>
 </dl>
 </div>
