--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -142,8 +142,8 @@
 </div>
 
 <div class="panel">
-<h2>Subscriptions</h2>
-<ul>
+<h2 class="collapser">Subscriptions</h2>
+<ul class="collapsible">
 <TMPL_LOOP Channels>
 <li>
 <a href="<TMPL_VAR url ESCAPE="HTML">" title="subscribe"><img src="images/feed-icon-10x10.png" alt="(feed)"></a> <a <TMPL_IF link>href="<TMPL_VAR link ESCAPE="HTML">" </TMPL_IF><TMPL_IF message>class="message" title="<TMPL_VAR message ESCAPE="HTML">"</TMPL_IF><TMPL_UNLESS message>title="<TMPL_VAR title_plain ESCAPE="HTML">"</TMPL_UNLESS>><TMPL_VAR name></a>
@@ -153,8 +153,8 @@
 </div>
 
 <div class="panel">
-<h2>Planetarium</h2>
-<ul>
+<h2 class="collapser">Planetarium</h2>
+<ul class="collapsible">
 <li><a href="http://www.planetapache.org/">Planet Apache</a></li>
 <li><a href="http://planet.debian.net/">Planet Debian</a></li>
 <li><a href="http://planet.ubuntu.com/">Planet Ubuntu</a></li>
