--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -58,7 +58,7 @@
 ### doesn't know about the "face", "facewidth" and "faceheight" configuration
 ### variables, but makes them available to us anyway.
 
-<h3<TMPL_IF channel_css-id> class="<TMPL_VAR channel_css-id ESCAPE="HTML">"</TMPL_IF>><a class="channel" href="<TMPL_VAR channel_link ESCAPE="HTML">" title="<TMPL_VAR channel_title_plain ESCAPE="HTML">"><TMPL_VAR channel_name></a></h3>
+<h3<TMPL_IF channel_css-id> class="<TMPL_VAR channel_css-id ESCAPE="HTML">"</TMPL_IF>><a target="_blank" class="channel" href="<TMPL_VAR channel_link ESCAPE="HTML">" title="<TMPL_VAR channel_title_plain ESCAPE="HTML">"><TMPL_VAR channel_name></a></h3>
 <TMPL_IF channel_face>
 <img class="face" src="images/<TMPL_VAR channel_face ESCAPE="HTML">" width="<TMPL_VAR channel_facewidth ESCAPE="HTML">" height="<TMPL_VAR channel_faceheight ESCAPE="HTML">" alt="">
 </TMPL_IF>
@@ -67,7 +67,7 @@
 
 <div class="entrygroup" id="e<TMPL_VAR id_hash ESCAPE="HTML">"<TMPL_IF channel_language> lang="<TMPL_VAR channel_language>"</TMPL_IF>>
 <TMPL_IF title>
-<h4<TMPL_IF title_language> lang="<TMPL_VAR title_language>"</TMPL_IF><TMPL_IF channel_css-id>  class="<TMPL_VAR channel_css-id ESCAPE="HTML">"</TMPL_IF> onclick="javascript:toggle(this.parentNode)"><a class="title" href="<TMPL_VAR link ESCAPE="HTML">"><TMPL_VAR title></a></h4>
+<h4<TMPL_IF title_language> lang="<TMPL_VAR title_language>"</TMPL_IF><TMPL_IF channel_css-id>  class="<TMPL_VAR channel_css-id ESCAPE="HTML">"</TMPL_IF> onclick="javascript:toggle(this.parentNode)"><a target="_blank" class="title" href="<TMPL_VAR link ESCAPE="HTML">"><TMPL_VAR title></a></h4>
 </TMPL_IF>
 <div class="entry">
 <div class="content"<TMPL_IF content_language> lang="<TMPL_VAR content_language>"</TMPL_IF>>
@@ -81,7 +81,7 @@
 ### demonstrate below.
 
 <p class="date" onclick="javascript:toggleAndShow(this.parentNode.parentNode)">
-<a href="<TMPL_VAR link ESCAPE="HTML">"><TMPL_IF author>by <TMPL_VAR author ESCAPE="HTML"> at </TMPL_IF><span class="date"><TMPL_VAR date></span><TMPL_IF category> under <TMPL_VAR category></TMPL_IF></a>
+<a target="_blank" href="<TMPL_VAR link ESCAPE="HTML">"><TMPL_IF author>by <TMPL_VAR author ESCAPE="HTML"> at </TMPL_IF><span class="date"><TMPL_VAR date></span><TMPL_IF category> under <TMPL_VAR category></TMPL_IF></a>
 </p>
 ### End <div class="entry">
 </div>
