--- a/theme/planet.css
+++ b/theme/planet.css
@@ -357,7 +357,7 @@ div.entrygroup > h4 {
     background-image: url("images/open.png");
     background-repeat: no-repeat;
     background-position: 100% 49%;
-    padding-right: 32px;
+    padding-right: 10mm;
 }
 div.entrygroup > h4:hover {
     background-image: url("images/open-hi.png");
@@ -378,7 +378,7 @@ div.entry > p.date {
     background-image: url("images/close.png");
     background-repeat: no-repeat;
     background-position: 100% 50%;
-    padding: 4px 32px 4px 0;
+    padding: 4px 10mm 4px 0;
     min-height: 20px;
     border-right: 1px solid #fff;
 }
