Add touch controls, hidden by default
Tap on the "NN messages, MM new" to see them.

--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -126,6 +126,23 @@
 
 
 ### 
+### Touch controls
+### 
+
+<div id="stats" class="notouch">
+</div>
+
+<div id="touch-controls" style="display: none">
+<tt>?</tt>
+<tt>j</tt>
+<tt>k</tt>
+<tt>n</tt>
+<tt>p</tt>
+<tt>o</tt>
+<tt>t</tt>
+</div>
+
+### 
 ### Sidebar
 ### 
 
