Better touch control usability on an Android tablet
Tested on a Nexus 7

Works kind of okay, when not zoomed in.  There's a slight delay between
a tap and the reaction; I should probably handle ontouchstart or
something.

--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -133,13 +133,11 @@
 </div>
 
 <div id="touch-controls" style="display: none">
-<tt>?</tt>
-<tt>j</tt>
-<tt>k</tt>
-<tt>n</tt>
-<tt>p</tt>
-<tt>o</tt>
-<tt>t</tt>
+<span><tt>n</tt><tt>p</tt></span>
+<span><tt>o</tt></span>
+<span><tt>t</tt></span>
+<span><tt>j</tt><tt>k</tt></span>
+<span><tt>?</tt></span>
 </div>
 
 ### 
