--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -21,6 +21,7 @@
 <link rel="alternate" href="<TMPL_VAR feed ESCAPE="HTML">" title="<TMPL_VAR channel_title_plain ESCAPE="HTML">" type="application/<TMPL_VAR feedtype>+xml">
 </TMPL_IF>
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/fastclick-0.6.7.js"></script>
 <script type="text/javascript" src="js/planetmg.js"></script>
 </head>
 
