Wrap main content in a div
No reason for this, merely symmetry with the sidebar div.  Also, a
nagging feeling that I may need this at some point.

--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -31,6 +31,8 @@
 ### Main content area
 ### 
 
+<div id="content">
+
 <h1><TMPL_VAR name></h1>
 <TMPL_VAR admin>
 
@@ -97,6 +99,8 @@
 </TMPL_IF>
 </TMPL_LOOP>
 
+### End <div class="content">
+</div>
 
 ### 
 ### Help popup
