Never wrap the touch controls
Makes it a little less bad when you zoom in too much on Android.

--- a/theme/planet.css
+++ b/theme/planet.css
@@ -475,6 +475,7 @@ div.entry > p.date:hover {
     bottom: 0;
     z-index: 10;
     text-align: center;
+    white-space: nowrap;
 }
 #touch-controls tt {
     margin-right: 1em;
