Add some padding in Android mode
So that I can read the end of the very last post on the page.

--- a/theme/planet.css
+++ b/theme/planet.css
@@ -419,6 +419,9 @@ div.entry > p.date:hover {
     background: transparent;
     border: none;
 }
+#content.touch {
+    padding-bottom: 150px;
+}
 #keyboard-shortcuts {
     border-radius: 1ex;
     margin-left: -15em;
