Repeat channel title in the entry title
Because when you have multiple entries per channel, it can get
confusing.  Also when you scroll up with 'p' and don't see the channel
title bar.

--- a/theme/planet.css
+++ b/theme/planet.css
@@ -65,6 +65,11 @@ h4 a {
 	color: inherit;
 }
 
+h4 .channel {
+        color: #555;
+        cursor: default;
+}
+
 img.face {
 	float: right;
 /*	margin-top: -3em; */
