--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -73,7 +73,8 @@
 
 <div class="entrygroup" id="e<TMPL_VAR id_hash ESCAPE="HTML">"<TMPL_IF channel_language> lang="<TMPL_VAR channel_language>"</TMPL_IF>>
 <TMPL_IF title>
-<h4<TMPL_IF title_language> lang="<TMPL_VAR title_language>"</TMPL_IF><TMPL_IF channel_css-id>  class="<TMPL_VAR channel_css-id ESCAPE="HTML">"</TMPL_IF> onclick="javascript:toggle(this.parentNode)"><a target="_blank" class="title" href="<TMPL_VAR link ESCAPE="HTML">"><TMPL_VAR title></a></h4>
+<h4<TMPL_IF title_language> lang="<TMPL_VAR title_language>"</TMPL_IF><TMPL_IF channel_css-id>  class="<TMPL_VAR channel_css-id ESCAPE="HTML">"</TMPL_IF> onclick="javascript:toggle(this.parentNode)"><a target="_blank" class="title" href="<TMPL_VAR link ESCAPE="HTML">"><TMPL_VAR title></a>
+<span class="channel"> - <TMPL_VAR channel_name></span></h4>
 </TMPL_IF>
 <div class="entry">
 <div class="content"<TMPL_IF content_language> lang="<TMPL_VAR content_language>"</TMPL_IF>>
